<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">libmangler</string>
	<string name="scan">Scannen</string>
	<string name="search">Suchen</string>
	<string name="addbook">Buch hinzufügen ...</string>
	<string name="adduser">Nutzer hinzufügen ...</string>
	<string name="listtags">#tags auflisten</string>
	<string name="listbooks">Bücher auflisten</string>
	<string name="listusers">Nutzer auflisten</string>
	<string name="close">Programm schließen</string>

	<string name="tomain">Zurück zum Hauptscreen</string>

	<string name="dosearch">Suchen!</string>

	<string name="lend">Entleihen an ...</string>
	<string name="returncopy">Zurückgeben</string>
	<string name="retire">Beiseitestellen</string>
	<string name="morecmds">Weitere Befehle ...</string>

	<string name="tobook">Buchinfo ...</string>
	<string name="note">Notiz hinzufügen ...</string>
	<string name="addtag">Tag hinzufügen ...</string>
	<string name="rmtag">Tag entfernen ...</string>
	<string name="back">Zurück</string>

	<string name="listcopies">Exemplarliste ...</string>
	<string name="addcopy">Exemplare hinzufügen ...</string>
	<string name="rmbook">Buch löschen</string>

	<string name="returnall">Alles zurückgeben</string>
	<string name="rmuser">Nutzer löschen</string>
	<string name="multilend">Mehrere Exemplare ausleihen ...</string>

	<string name="isbn">978-A-BBB-CCCCC-X</string>
	<string name="title">Titel meines tollen Buchs</string>
	<string name="authors">Autor 1, Autor 2, Autor 3</string>
	<string name="doaddbook">Buch erstellen</string>
</resources>
