<ViewFlipper
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/flipper">

		<LinearLayout
			android:id="@+id/searchLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<Button
			    android:id="@+id/Bscan"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/scan" />

			<Button
				android:id="@+id/Bsearch"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/search" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/infoLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/Tinfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

			<Button
			    android:id="@+id/Blend"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/lend" />

			<Button
			    android:id="@+id/Bnote"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/note" />

			<Button
			    android:id="@+id/Bretire"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/retire" />

			<Button
			    android:id="@+id/Btomain"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/tomain" />

   		 </LinearLayout>
</ViewFlipper>
